.provarCaches/00D6C0000000xA6UAI/objects/sked__Account_Tag__c.object
<CustomObject>
    <fields>
        <fullName>sked__Account__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Tags</relationshipLabel>
        <relationshipName>Account_Tags</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>sked__Tag__c</referenceTo>
        <relationshipLabel>Account Tags</relationshipLabel>
        <relationshipName>Account_Tags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sked__Weighting__c</fullName>
        <description>Weighting to determine how important this Tag is on the account. Ignored if the tag is marked as Mandatory.</description>
        <label>Weighting</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Tag</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>AT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__Weighting_mutex_not_required</fullName>
        <active>true</active>
        <description>An Account tag must have a weighting if it&apos;s marked as not &apos;required&apos;</description>
        <errorConditionFormula>AND(ISNULL(sked__Weighting__c), NOT(sked__Required__c))</errorConditionFormula>
        <errorDisplayField>sked__Weighting__c</errorDisplayField>
        <errorMessage>An Account tag must have a weighting if it&apos;s marked as not &apos;required&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__Weighting_mutex_required</fullName>
        <active>true</active>
        <description>An Account tag cannot have a weighting if it&apos;s marked &apos;required&apos;</description>
        <errorConditionFormula>AND( NOT(ISNULL(sked__Weighting__c)), sked__Required__c )</errorConditionFormula>
        <errorDisplayField>sked__Weighting__c</errorDisplayField>
        <errorMessage>An Account tag cannot have a weighting if it&apos;s marked &apos;required&apos;</errorMessage>
    </validationRules>
</CustomObject>